# coxygen-mssd

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MSSD_Presentation.pptx  README.md  mockup-sundae-swap-decentralized-exchange.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: mssd-0.1.0.0-inplace.conf  package.cache
src/: Exchange.hs  LP.hs  Token.hs  User.hs
test/: Spec.hs
