-- File: mockup-sundae-swap-decentralized-exchange.cabal

name:                mssd
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Token
    , User
    , Exchange
    , LP
  build-depends:
      base >=4.7 && <5
  default-language:    Haskell2010

test-suite mssd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , mssd
    , tasty
    , tasty-hunit
    , QuickCheck >=2.14
    , tasty-quickcheck
  default-language:    Haskell2010

executable mssd-app
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base       >=4.7 && <5
    , mssd
  default-language:    Haskell2010
